pre-processing english_ecsc children + kennedy_james

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+opensmile
 torch
-torchaudio
-librosa
 transformers
+datasets
+tqdm
+accelerate
+librosa
 soundfile
-tomli
+torchaudio
+pyloudnorm
+speechbrain
+torchmetrics
